syntax = "proto3";

package user;

option go_package = "src/proto";

service UserService {
  rpc FindByStudentID(FindByStudentIDUserRequest) returns(FindByStudentIDUserResponse) {}
  rpc Create(CreateUserRequest) returns (CreateUserResponse){}
}

message User{
  string id = 1;
  string firstname = 2;
  string lastname = 3;
  string nickname = 4;
  string studentID = 5;
  string faculty = 6;
  string year = 7;
  string phone = 8;
  string lineID = 9;
  string email = 10;
  string allergyFood = 11;
  string foodRestriction = 12;
  string allergyMedicine = 13;
  string disease = 14;
  string vaccineCertificateUrl = 15;
  string imageUrl = 16;
}

// Find By Student ID

message FindByStudentIDUserRequest{
  string studentId = 1;
}

message FindByStudentIDUserResponse{
  User user = 1;
}

// Create

message CreateUserRequest{
  User user = 1;
}

message CreateUserResponse{
  User user = 1;
}
